--- a/css/style.css
+++ b/css/style.css
@@ -214,14 +214,23 @@ textarea {
 }
 
 .home__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-transform: uppercase;
   font-size: 30px;
-  color: yellow;
+  color: #ff0;
   font-weight: 900;
   position: absolute;
   width: 100%;
   height: 100px;
-  top: 50px;
+  top: 0px;
   left: 0;
   text-align: center;
   letter-spacing: 5px;
@@ -230,8 +239,8 @@ textarea {
 .home__square {
   position: relative;
   cursor: pointer;
-  width: 600px;
-  height: 600px;
+  width: 50%;
+  height: 50%;
   background-color: #666;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -242,6 +251,7 @@ textarea {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-top: 30px;
 }
 
 .span__1 {
